--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,11 +21,14 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
   cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
   firebase_core: ^1.3.0
+  flutter:
+    sdk: flutter
+  google_fonts: ^2.1.0
+  provider: ^6.0.0
+  uuid: ^3.0.4
 
 dev_dependencies:
   flutter_test:
