--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^1.3.0
   flutter:
     sdk: flutter
+  flutter_spinkit: ^5.1.0
   google_fonts: ^2.1.0
   provider: ^6.0.0
   uuid: ^3.0.4
