--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,10 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  awesome_dialog: ^2.1.1
   cloud_firestore: ^2.3.0
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.4
   firebase_core: ^1.3.0
   flutter:
     sdk: flutter
@@ -46,6 +48,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   # assets:
+  assets:
+    - lib/Assets/download.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
