--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ flutter:
   # assets:
   assets:
     - lib/Assets/download.png
+    - lib/Assets/giflogo.gif
+    - lib/Assets/logo.jpeg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
