--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ dependencies:
   
   flutter:
     sdk: flutter
+  flutter_inappwebview: ^5.3.2
   flutter_spinkit: ^5.1.0
   google_fonts: ^2.1.0
   provider: ^6.0.0
   uuid: ^3.0.4
+  youtube_player_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_test:
