--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,12 +26,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.1.4
   firebase_core: ^1.3.0
-  
+  firebase_storage: ^10.1.0
   flutter:
     sdk: flutter
   flutter_inappwebview: ^5.3.2
   flutter_spinkit: ^5.1.0
   google_fonts: ^2.1.0
+  image_picker: ^0.8.4+4
+  permission_handler: ^8.2.6
   provider: ^6.0.0
   uuid: ^3.0.4
   youtube_player_flutter: ^8.0.0
