--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   google_fonts: ^2.1.0
   image_picker: ^0.8.4+4
+  lint: ^1.7.2
   permission_handler: ^8.2.6
   provider: ^6.0.0
   uuid: ^3.0.4
