--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   flutter_inappwebview: ^5.3.2
   flutter_spinkit: ^5.1.0
+  get: ^4.3.8
   google_fonts: ^2.1.0
   image_picker: ^0.8.4+4
   lint: ^1.7.2
